Continuing to work on project.ipynb

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "04495cc0",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,10 @@
     "# Declare your variables here.\n",
     "\n",
     "#Example\n",
-    "greeting = \"Hello world\""
+    "name = 'Caleb'\n",
+    "age = 29\n",
+    "likes_programming = True\n",
+    "avg_grade = 100.00"
    ]
   },
   {
@@ -40,12 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cb7a4019",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Favorite numbers list"
+    "# Favorite numbers list\n",
+    "favorite_num_list = [0,1,2,3,4]"
    ]
   },
   {
@@ -62,12 +66,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7997e8d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Name': 'Caleb', 'Age': 29, 'Final grade': 100.0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "student_info = {'Name': name, 'Age': age, 'Final grade': avg_grade}\n",
+    "\n",
+    "student_info"
    ]
   },
   {
@@ -83,12 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6f5ee032",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "grade_list = [8.5, 9.2, 7.8, 8.9, 10]"
    ]
   },
   {
@@ -104,9 +123,21 @@
    "execution_count": null,
    "id": "4396c1a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'min'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# TODO\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m lowest_grade = \u001b[43mgrade_list\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmin\u001b[49m()\n\u001b[32m      3\u001b[39m highest_grade = grade_list.max()\n\u001b[32m      5\u001b[39m lowest_grade\n",
+      "\u001b[31mAttributeError\u001b[39m: 'list' object has no attribute 'min'"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n"
    ]
   },
   {
@@ -748,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
