continuing my work on the exercises in project.ipynb

--- a/project.ipynb
+++ b/project.ipynb
@@ -120,24 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4396c1a4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'min'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# TODO\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m lowest_grade = \u001b[43mgrade_list\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmin\u001b[49m()\n\u001b[32m      3\u001b[39m highest_grade = grade_list.max()\n\u001b[32m      5\u001b[39m lowest_grade\n",
-      "\u001b[31mAttributeError\u001b[39m: 'list' object has no attribute 'min'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.8\n",
+      "10\n"
      ]
     }
    ],
    "source": [
-    "# TODO\n"
+    "# TODO\n",
+    "lowest_grade = min(grade_list)\n",
+    "highest_grade = max(grade_list)\n",
+    "\n",
+    "print(lowest_grade)\n",
+    "print(highest_grade)"
    ]
   },
   {
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7ac6cb18",
    "metadata": {},
    "outputs": [
@@ -547,7 +549,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,12 +572,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a8ff6c53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id_realEstates</th>\n",
+       "      <th>isNew</th>\n",
+       "      <th>realEstate_name</th>\n",
+       "      <th>phone_realEstate</th>\n",
+       "      <th>url_inmueble</th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>surface</th>\n",
+       "      <th>price</th>\n",
+       "      <th>...</th>\n",
+       "      <th>level4Id</th>\n",
+       "      <th>level5Id</th>\n",
+       "      <th>level6Id</th>\n",
+       "      <th>level7Id</th>\n",
+       "      <th>level8Id</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>zipCode</th>\n",
+       "      <th>customZone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>153771986</td>\n",
+       "      <td>False</td>\n",
+       "      <td>ferrari 57 inmobiliaria</td>\n",
+       "      <td>912177526.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>195000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,2948276786438</td>\n",
+       "      <td>-3,44402412135624</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>153867863</td>\n",
+       "      <td>False</td>\n",
+       "      <td>tecnocasa fuenlabrada ferrocarril</td>\n",
+       "      <td>916358736.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>89000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40,28674</td>\n",
+       "      <td>-3,79351</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>153430440</td>\n",
+       "      <td>False</td>\n",
+       "      <td>look find boadilla</td>\n",
+       "      <td>916350408.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>390000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,4115646786438</td>\n",
+       "      <td>-3,90662252135624</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  id_realEstates  isNew                    realEstate_name  \\\n",
+       "0           1       153771986  False            ferrari 57 inmobiliaria   \n",
+       "1           2       153867863  False  tecnocasa fuenlabrada ferrocarril   \n",
+       "2           3       153430440  False                 look find boadilla   \n",
+       "\n",
+       "   phone_realEstate                                       url_inmueble  rooms  \\\n",
+       "0       912177526.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
+       "1       916358736.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
+       "2       916350408.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    2.0   \n",
+       "\n",
+       "   bathrooms  surface   price  ... level4Id level5Id level6Id level7Id  \\\n",
+       "0        2.0    103.0  195000  ...        0        0        0        0   \n",
+       "1        1.0      NaN   89000  ...        0        0        0        0   \n",
+       "2        2.0     99.0  390000  ...        0        0        0        0   \n",
+       "\n",
+       "  level8Id accuracy          latitude          longitude zipCode customZone  \n",
+       "0        0        0  40,2948276786438  -3,44402412135624     NaN        NaN  \n",
+       "1        0        1          40,28674           -3,79351     NaN        NaN  \n",
+       "2        0        0  40,4115646786438  -3,90662252135624     NaN        NaN  \n",
+       "\n",
+       "[3 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "ds.head(3)"
    ]
   },
   {
@@ -600,12 +754,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aa45da68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "address    El Escorial\n",
+       "price          8500000\n",
+       "Name: 13110, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "most_expensive_house_info = ds.loc[ds['price'].idxmax(), ['address', 'price']]\n",
+    "most_expensive_house_info"
    ]
   },
   {
@@ -622,12 +791,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "007c60de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "address    Parla\n",
+       "price          0\n",
+       "Name: 366, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "least_expensive_house_info = ds.loc[ds['price'].idxmin(), ['address', 'price']]\n",
+    "least_expensive_house_info"
    ]
   },
   {
@@ -648,12 +832,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "580cbc83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "address    Calle Amparo,  Madrid Capital\n",
+      "surface                             15.0\n",
+      "Name: 498, dtype: object\n",
+      "address    Sevilla la Nueva\n",
+      "surface            249000.0\n",
+      "Name: 6794, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "#ds.columns.tolist()\n",
+    "smallest_house_by_area = ds.loc[ds['surface'].idxmin(), ['address', 'surface']]\n",
+    "largest_house_by_area = ds.loc[ds['surface'].idxmax(), ['address', 'surface']]\n",
+    "\n",
+    "print(smallest_house_by_area)\n",
+    "print(largest_house_by_area)"
    ]
   },
   {
@@ -672,12 +875,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "07ef25bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Arganda del Rey', 'Fuenlabrada', 'Boadilla del Monte', 'Las Rozas de Madrid', ' Madrid Capital', 'Villaviciosa de Odón', 'Pinto', 'Valdemoro', 'Navalcarnero', 'Pozuelo de Alarcón', 'Torrejón de Ardoz', 'Navalagamella', 'San Sebastián de los Reyes', 'Rivas-vaciamadrid', 'Alpedrete', 'Móstoles', 'San Fernando de Henares', 'Coslada', 'Becerril de la Sierra', 'Alcalá de Henares', 'Chinchón', 'Parla', 'Alcorcón', 'El Escorial', 'Leganés', 'Pedrezuela', 'Majadahonda', 'Villanueva de la Cañada', 'Villanueva del Pardillo', 'Torrelodones', 'Moralzarzal', 'Mejorada del Campo', 'Aranjuez', 'Corpa', 'Getafe', 'Velilla de San Antonio', 'Sevilla la Nueva', 'San Martín de la Vega', 'Villalbilla', 'Collado Villalba', 'Alcobendas', 'El Molar (Madrid)', 'Moraleja de Enmedio', 'Algete', 'Campo Real', 'Torrejón de la Calzada', 'Colmenar Viejo', 'Valdemorillo', 'Fuente El Saz de Jarama', 'Tres Cantos', 'Arroyomolinos (Madrid)', 'Griñón', 'Paracuellos de Jarama', 'Guadarrama', 'Titulcia', 'Galapagar', 'Collado Mediano', 'Los Molinos', 'San Lorenzo de El Escorial', 'Loeches', 'San Martín de Valdeiglesias', 'Navas del Rey', 'Bustarviejo', 'Manzanares El Real', 'Carabaña', 'Casarrubuelos', 'Cercedilla', 'Fresnedillas de la Oliva', 'Valdemaqueda', 'Robledo de Chavela', 'Miraflores de la Sierra', 'Humanes de Madrid', 'Valdetorres de Jarama', 'San Agustín del Guadalix', 'Ciempozuelos', 'Camarma de Esteruelas', 'Torres de la Alameda', 'Talamanca de Jarama', 'El Atazar', 'Hoyo de Manzanares', 'El Boalo - Cerceda – Mataelpino', 'El Álamo', 'Valdilecha', 'Valdeolmos-Alalpardo', 'Guadalix de la Sierra', 'Belmonte de Tajo', 'El Vellón', 'Brunete', 'Redueña', 'Morata de Tajuña', 'Tielmes', 'Gargantilla del Lozoya', 'Meco', 'Venturada', 'Quijorna', 'Cenicientos', 'Torrejón de Velasco', 'Navacerrada', 'Santa María de la Alameda', 'Orusco de Tajuña', 'Daganzo de Arriba', 'Villamanta', 'Anchuelo', 'Valdaracete', 'Ajalvir', 'Los Santos de la Humosa', 'Villamanrique de Tajo', 'Colmenar de Oreja', 'Villa del Prado', 'Fuentidueña de Tajo', 'Colmenar del Arroyo', 'Valdelaguna', 'Cubas de la Sagra', 'Valdeavero', 'Aldea del Fresno', 'Ribatejada', 'Torrelaguna', 'Batres', 'Pezuela de las Torres', 'Colmenarejo', 'Serranillos del Valle', 'Cobeña', 'Soto del Real', 'El Berrueco', 'Villanueva de Perales', 'Fresno de Torote - Serracines', 'Pozuelo del Rey', 'Pelayos de la Presa', 'La Cabrera', 'Nuevo Baztán', 'Perales de Tajuña', 'Villaconejos', 'Villarejo de Salvanés', 'Cadalso de los Vidrios', 'Santorcaz', 'Madarcos', 'Garganta de los Montes', 'Puentes Viejas', 'Torremocha de Jarama', 'Valdemanco', 'Braojos', 'Lozoyuela-navas-sieteiglesias', 'Piñuécar-gandullas', 'Valdepiélagos', 'Valverde de Alcalá', 'Villar del Olmo', 'Villamantilla', 'Horcajo de la Sierra', 'Gascones', 'Zarzalejo', 'Villavieja del Lozoya', 'Brea de Tajo', 'Estremera', 'Chapinería', 'Navarredonda', 'Patones', 'Ambite', 'Navalafuente', 'Lozoya', 'Canencia', 'Cabanillas de la Sierra', 'Buitrago del Lozoya', 'Fresno de Torote', 'Robregordo', 'Pinilla del Valle', 'Rascafría', 'La Hiruela', 'Montejo de la Sierra']\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "distinct_populations = ds['level5'].unique().tolist()\n",
+    "\n",
+    "print(distinct_populations)"
    ]
   },
   {
@@ -692,12 +906,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7eb98e35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'id_realEstates', 'isNew', 'realEstate_name',\n",
+       "       'phone_realEstate', 'url_inmueble', 'rooms', 'bathrooms', 'surface',\n",
+       "       'price', 'date', 'description', 'address', 'country', 'level1',\n",
+       "       'level2', 'level3', 'level4', 'level5', 'level6', 'level7', 'level8',\n",
+       "       'upperLevel', 'countryId', 'level1Id', 'level2Id', 'level3Id',\n",
+       "       'level4Id', 'level5Id', 'level6Id', 'level7Id', 'level8Id', 'accuracy',\n",
+       "       'latitude', 'longitude', 'zipCode', 'customZone'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "ds.isnull().columns"
    ]
   },
   {
